--- a/src/assets/css/main-tailwind.css
+++ b/src/assets/css/main-tailwind.css
@@ -721,6 +721,10 @@ html {
   margin-top: 1.5rem;
 }
 
+.mb-52 {
+  margin-bottom: 13rem;
+}
+
 .block {
   display: block;
 }
@@ -1036,6 +1040,10 @@ html {
 
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pb-40 {
+  padding-bottom: 10rem;
 }
 
 .pb-5 {
